# first_deep_learning

./: .gitignore  pyproject.toml
first_deep_learning/: dataset.py  feature_extractor.py
